--- a/frontend/src/CSS/index.css
+++ b/frontend/src/CSS/index.css
@@ -13,10 +13,29 @@ body {
   margin-left: auto;
 }
 
-#add {
+/* MAIN */
+#main {
+  margin-top: 2%;
   text-align: center;
+  max-width: 75vw;
+  margin-right: auto;
+  margin-left: auto;
 }
 
+/* DROPMENU */
+#dropmenu {
+  margin-bottom: 2%;
+}
+
+/* ADDWORDS */
+#add {
+  margin-top: 2%;
+  max-width: 75vw;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* NAVIGATION */
 #navbar {
   background-color: black;
   max-width: 100vw;
@@ -36,14 +55,21 @@ body {
   margin-right: auto;
   margin-left: auto;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  text-align: center;
+}
+
+#button {
+  border: rgb(224, 248, 6) 1px solid;
+  color: whitesmoke;
+  margin-left: 15px;
 }
 
 #basic-navbar {
   color: whitesmoke;
 }
 
-#button {
-  border: rgb(224, 248, 6) 1px solid;
-  color: whitesmoke;
+/* MYTABLE */
+#check {
+  color: green;
 }
