--- a/frontend/src/CSS/index.css
+++ b/frontend/src/CSS/index.css
@@ -11,6 +11,8 @@ body {
   max-width: 968px;
   margin-right: auto;
   margin-left: auto;
+  background-color: rgba(240, 128, 128, 0.707);
+  min-height: 98vh;
 }
 
 /* MAIN */
@@ -27,12 +29,26 @@ body {
   margin-bottom: 2%;
 }
 
+#toggle {
+  border: 1px darkblue solid;
+}
+
 /* ADDWORDS */
 #add {
   margin-top: 2%;
   max-width: 75vw;
   margin-right: auto;
   margin-left: auto;
+}
+
+/* MYFORM */
+#form {
+  background-color: whitesmoke;
+  padding: 1%;
+  border-radius: 10px;
+  max-width: 95%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* NAVIGATION */
@@ -70,8 +86,19 @@ body {
 }
 
 /* MYTABLE */
+#mytable {
+  background-color: white;
+  padding: 1%;
+  border-radius: 10px;
+}
+
 #check-row {
   text-align: right;
+  max-width: 75vw;
+}
+
+#result {
+  padding-top: 6px;
 }
 
 #check {
