--- a/frontend/src/CSS/index.css
+++ b/frontend/src/CSS/index.css
@@ -27,6 +27,11 @@ body {
 /* DROPMENU */
 #dropmenu {
   margin-bottom: 2%;
+  background-color: whitesmoke;
+  padding: 2%;
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.13), 1px 2px 2px rgba(0, 0, 0, 0.1),
+    -1px -2px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
 }
 
 #toggle {
@@ -37,19 +42,37 @@ body {
 #add {
   margin-top: 2%;
   max-width: 75vw;
-  margin-right: auto;
   margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  background-color: whitesmoke;
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.13), 1px 2px 2px rgba(0, 0, 0, 0.1),
+    -1px -2px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  padding: 2%;
 }
 
-/* MYFORM */
+#formbuttons {
+  margin-top: 2%;
+  text-align: center;
+  max-width: 50vw;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  justify-content: space-around;
+}
+
 #form {
   background-color: whitesmoke;
-  padding: 1%;
+  margin-top: 2%;
+  padding: 3%;
   border-radius: 10px;
   max-width: 95%;
   margin-left: auto;
   margin-right: auto;
 }
+
+/* MYFORM */
 
 /* NAVIGATION */
 #navbar {
@@ -60,6 +83,8 @@ body {
   padding-bottom: 5px;
   padding-top: 5px;
   position: sticky;
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.13), 1px 2px 2px rgba(0, 0, 0, 0.1),
+    -1px -2px 2px rgba(0, 0, 0, 0.05);
 }
 
 #navbrand {
@@ -90,6 +115,8 @@ body {
   background-color: white;
   padding: 1%;
   border-radius: 10px;
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.13), 1px 2px 2px rgba(0, 0, 0, 0.1),
+    -1px -2px 2px rgba(0, 0, 0, 0.05);
 }
 
 #check-row {
