--- a/frontend/src/CSS/index.css
+++ b/frontend/src/CSS/index.css
@@ -61,7 +61,7 @@ body {
   display: flex;
   justify-content: space-around;
 }
-
+/* AddForm */
 #form {
   background-color: whitesmoke;
   margin-top: 2%;
@@ -72,7 +72,43 @@ body {
   margin-right: auto;
 }
 
-/* MYFORM */
+#addcheck {
+  font-size: 200%;
+  margin-bottom: 6px;
+  margin-left: 13px;
+  color: green;
+}
+
+/* DelForm */
+#dropdown {
+  margin-bottom: 1%;
+}
+
+#edit-btn {
+  margin-right: 5px;
+  font-size: 115%;
+  padding-top: 1px;
+}
+
+#del-btn {
+  font-size: 115%;
+  padding-top: 1px;
+}
+
+/* ModForm */
+#modform {
+  background-color: whitesmoke;
+  margin-top: 2%;
+  padding: 3%;
+  border-radius: 10px;
+  max-width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#modal {
+  margin-top: 10vh;
+}
 
 /* NAVIGATION */
 #navbar {
