--- a/frontend/src/CSS/index.css
+++ b/frontend/src/CSS/index.css
@@ -5,12 +5,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-.App {
-  max-width: 968px;
-  margin-right: auto;
-  margin-left: auto;
   background: #0f2027; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
@@ -24,7 +18,13 @@ body {
     #203a43,
     #2c5364
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  min-height: 98vh;
+}
+
+.App {
+  max-width: 968px;
+  margin-right: auto;
+  margin-left: auto;
+  min-height: 100vh;
 }
 
 /* MAIN */
@@ -39,6 +39,9 @@ body {
 /* DROPMENU */
 #dropmenu {
   margin-bottom: 2%;
+  max-width: 95%;
+  margin-right: auto;
+  margin-left: auto;
   background-color: whitesmoke;
   padding: 2%;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.13), 1px 2px 2px rgba(0, 0, 0, 0.1),
@@ -68,7 +71,7 @@ body {
 /* Admin */
 #add {
   margin-top: 2%;
-  max-width: 75vw;
+  max-width: 50%;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -94,7 +97,7 @@ body {
   margin-top: 2%;
   padding: 3%;
   border-radius: 10px;
-  max-width: 50vw;
+  max-width: 50%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -161,7 +164,6 @@ body {
 /* NAVIGATION */
 #navbar {
   background-color: black;
-  max-width: 100vw;
   margin-right: auto;
   margin-left: auto;
   padding-bottom: 5px;
@@ -173,10 +175,11 @@ body {
 
 #navbrand {
   color: whitesmoke;
+  margin-left: 50px;
 }
 
 #nav {
-  width: 75vw;
+  max-width: 95%;
   margin-right: auto;
   margin-left: auto;
   display: flex;
@@ -197,6 +200,9 @@ body {
 /* MYTABLE */
 #mytable {
   background-color: white;
+  max-width: 95%;
+  margin-right: auto;
+  margin-left: auto;
   padding: 1%;
   border-radius: 10px;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.13), 1px 2px 2px rgba(0, 0, 0, 0.1),
